arreglo en las reseñas

--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -43,7 +43,7 @@
               <a class="nav-link" href="noticias.html">Noticias</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="reseñas.html">Reseñas</a>
+              <a class="nav-link" href="resennas.html">Reseñas</a>
             </li>
           </ul>
         </div>
@@ -57,10 +57,6 @@
   <main>
     <form>
 
-      <!-- DIVISIÓN VERTICAL -->
-      <!-- <div class="d-flex" style="height: 200px;">
-        <div class="vr"></div>
-      </div> -->
 
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Nombre</label>
