--- a/HTML/noticias.html
+++ b/HTML/noticias.html
@@ -43,7 +43,7 @@
               <a class="nav-link" href="noticias.html">Noticias</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="reseñas.html">Reseñas</a>
+              <a class="nav-link" href="resennas.html">Reseñas</a>
             </li>
           </ul>
         </div>
