--- a/HTML/resennas.html
+++ b/HTML/resennas.html
@@ -44,7 +44,7 @@
                             <a class="nav-link" href="noticias.html">Noticias</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="reseñas.html">Reseñas</a>
+                            <a class="nav-link" href="./resennas.html">Reseñas</a>
                         </li>
                     </ul>
                 </div>
@@ -58,13 +58,13 @@
     <main>
         <form>
             <div data-aos="fade-up-right" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@CosmicExplorer88" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="1984 de George Orwell: Un clásico distópico que nos recuerda la importancia de la libertad y la privacidad."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
@@ -72,26 +72,26 @@
             </div>
 
             <div data-aos="fade-up-left" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@RubyJazz" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="Crónica de una muerte anunciada de Gabriel García Márquez: Una historia intrigante y bien narrada que te mantendrá en vilo hasta el final."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
                 <hr>
             </div>
             <div data-aos="fade-up-right" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@ElectricSunrise" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="Harry Potter y la piedra filosofal de J.K. Rowling: El primer libro de la serie de fantasía más famosa del mundo, una lectura obligada para todas las edades."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
@@ -99,26 +99,26 @@
             </div>
 
             <div data-aos="fade-up-left" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@MidnightVixen" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="Los juegos del hambre de Suzanne Collins: Un relato emocionante sobre la lucha de una joven por sobrevivir en un mundo post-apocalíptico."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
                 <hr>
             </div>
             <div data-aos="fade-up-right" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@BlueRidgeRider" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="El principito de Antoine de Saint-Exupéry: Una historia sencilla y conmovedora que nos hace reflexionar sobre la vida y la importancia de las relaciones humanas."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
@@ -126,26 +126,26 @@
             </div>
 
             <div data-aos="fade-up-left" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@SnowyOwl33" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="El código Da Vinci de Dan Brown: Un thriller emocionante lleno de misterios, simbolismos y teorías conspirativas."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
                 <hr>
             </div>
             <div data-aos="fade-up-right" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@StarryNightSky" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="El gran Gatsby de F. Scott Fitzgerald: Una novela llena de glamour y decadencia que retrata la época dorada de los años 20 en Nueva York."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
@@ -153,26 +153,26 @@
             </div>
 
             <div data-aos="fade-up-left" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@MountainHiker77" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="La sombra del viento de Carlos Ruiz Zafón: Una novela gótica y emocionante que nos transporta a la Barcelona de la posguerra."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
                 <hr>
             </div>
             <div data-aos="fade-up-right" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@OceanBreeze21" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="Cien años de soledad de Gabriel García Márquez: Una obra maestra que nos lleva por un viaje mágico y surrealista a través de varias generaciones de una familia."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
@@ -180,26 +180,26 @@
             </div>
 
             <div data-aos="fade-up-left" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@RusticDreamer" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="El señor de los anillos de J.R.R. Tolkien: Una epopeya fantástica que nos lleva a un mundo lleno de aventuras, magia y peligros."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
                 <hr>
             </div>
             <div data-aos="fade-up-right" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@FireflyGlow" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="La ladrona de libros de Markus Zusak: Una historia conmovedora y emotiva sobre la vida de una niña durante la Segunda Guerra Mundial."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
@@ -207,26 +207,26 @@
             </div>
 
             <div data-aos="fade-up-left" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@WildRoseThorn" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="El alquimista de Paulo Coelho: Un libro inspirador que nos anima a seguir nuestros sueños y encontrar nuestro camino en la vida."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
                 <hr>
             </div>
             <div data-aos="fade-up-right" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@ThunderboltStrike" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="Matar a un ruiseñor de Harper Lee: Una novela conmovedora que nos muestra la dura realidad de la discriminación racial en el sur de Estados Unidos."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
@@ -234,99 +234,33 @@
             </div>
 
             <div data-aos="fade-up-left" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@MysticSoulSeeker" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="La chica del tren de Paula Hawkins: Un thriller psicológico lleno de giros inesperados y personajes complejos."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
                 <hr>
             </div>
             <div data-aos="fade-up-right" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
+                <input type="text" class="form-control" placeholder="@SilverFoxRun" aria-label="Username"
                     aria-describedby="basic-addon1">
 
                 <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
+                    <textarea class="form-control" placeholder="El perfume de Patrick Süskind: Una novela oscura y fascinante que explora la obsesión y la locura a través de la vida de un asesino en serie."></textarea>
                 </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
+                <input class="btn btn-primary" type="submit" value="Responder">
             </div>
 
             <div class="text-success">
                 <hr>
             </div>
 
-            <div data-aos="fade-up-left" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
-                    aria-describedby="basic-addon1">
 
-                <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
-                </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
-            </div>
-
-            <div class="text-success">
-                <hr>
-            </div>
-            <div data-aos="fade-up-right" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
-                    aria-describedby="basic-addon1">
-
-                <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
-                </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
-            </div>
-
-            <div class="text-success">
-                <hr>
-            </div>
-
-            <div data-aos="fade-up-left" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
-                    aria-describedby="basic-addon1">
-
-                <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
-                </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
-            </div>
-
-            <div class="text-success">
-                <hr>
-            </div>
-            <div data-aos="fade-up-right" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
-                    aria-describedby="basic-addon1">
-
-                <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
-                </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
-            </div>
-
-            <div class="text-success">
-                <hr>
-            </div>
-
-            <div data-aos="fade-up-left" class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="@Nombre de usuario" aria-label="Username"
-                    aria-describedby="basic-addon1">
-
-                <div class="input-group">
-                    <textarea class="form-control" placeholder="Reseña del libro"></textarea>
-                </div>
-                <input class="btn btn-primary" type="submit" value="Publicar">
-            </div>
-
-            <div class="text-success">
-                <hr>
-            </div>
         </form>
 
 
