--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a class="nav-link" href="./HTML/noticias.html">Noticias</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./HTML/reseñas.html">Reseñas</a>
+                    <a class="nav-link" href="./HTML/resennas.html">Reseñas</a>
                   </li>
                 </ul>
               </div>
